Tue Oct  9 17:59:00 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (rb_random_ulong_limited): new function to return a random
	  value from 0 upto limit as unsigned long, simillary to
	  rb_genrand_ulong_limited but with arbitrary RNG object.

Tue Oct  9 17:13:27 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_execarg_addopt, rb_execarg_run_options): add :uid and
	  :gid options.  [ruby-core:47414] [Feature #6975]

Tue Oct  9 14:36:11 2012  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_free): fix memory leak.
	  rb_iseq_t::callinfo_entries should be freed.

Tue Oct  9 14:28:18 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h (rb_call_info_t): add new type `rb_call_info_t'.
	  This data structure contains information including inline method
	  cache. After that, `struct iseq_inline_cache_entry' does not
	  need to contain inline cache for method invocation.
	  Other information will be added to this data structure.

	* vm_core.h (rb_iseq_t): add `callinfo_entries' and `callinfo_size'
	  members to `rb_iseq_t'.

	* insns.def, compile.c: Use CALL_INFO instead of IC.

	* tool/instruction.rb: support CALL_INFO as operand type.

	* vm_insnhelper.c, vm_insnhelper.h: ditto.

Sun Oct  7 23:54:33 2012  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* ext/zlib/zlib.c (zstream_run_func): don't call inflate() when
	  z->stream.avail_in == 0. it return Z_BUF_ERROR.
	  but deflate() could be called with z->stream->avail_in == 0 because
	  it has hidden buffer in z->stream->state (opaque structure).
	  fix for gem install error. [ruby-dev:46149] [Bug #7040]

Mon Oct  8 23:55:41 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_mod_refinements): new method Module#refinements.

	* test/ruby/test_refinement.rb: add new tests for the above changes.

Mon Oct  8 23:02:19 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c, gc.c, iseq.c, node.h, vm_insnhelper.c, vm_insnhelper.h,
	  vm_method.c: rename omod and overlaid modules to refinements.
