@@ -1,4 +1,7 @@
-Tue Oct  9 17:59:00 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Tue Oct  9 18:01:37 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* array.c (rb_ary_sample): use rb_random_ulong_limited, since
+	  precision of long may be larger than double.
 
 	* random.c (rb_random_ulong_limited): new function to return a random
 	  value from 0 upto limit as unsigned long, simillary to
